# simpleMDMpy

./: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
SimpleMDMpy/: AppGroups.py  Apps.py  AssignmentGroups.py  Cli.py  CustomAttributes.py  CustomConfigurationProfiles.py  DepServers.py  DeviceGroups.py  Devices.py  Enrollments.py  InstalledApps.py  Logs.py  ManagedAppConfigs.py  SimpleMDM.py  __init__.py
