[metadata]
name = SimpleMDMpy
# Pull the version from the module itself
version = attr: SimpleMDMpy.VERSION
description = CLI and library for interacting with SimpleMDM.
long_description = file: README.md
long_description_content_type = text/markdown
author = The MacAdmins contributors
author_email = \#simplemdm in the MacAdmins Slack.
license_files = LICENSE

[options]
# Find all valid packages
packages = find:
# Require at least python3.7
python_requires = >= 3.7
setup_requires =
    requests

[options.entry_points]
# Create the "alphabetzied" script
console_scripts =
    simplemdm = SimpleMDMpy:main

[options.packages.find]
# Ignore the test folder when finding packages
exclude =
    tests

[options.extras_require]
# For developers, give them linting tools and sphinx for docs building
dev = flake8; mypy

[flake8]
max-line-length=80
exclude = .git,__pycache__,.eggs
